--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta property="og:title" content="Ananth Gadicherla Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sriguruananth.github.io/masterPortfolio/public/index.html" />
+    <meta property="og:url" content="https://sriguruananth.github.io/Resume-build" />
     <meta name="description" content="Ananth Gadicherla's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Ananth, PortFolio, MasterPortfolio, Ananth Gadicherla's Portfolio" />
